//
//  AccessibilityIdentifiers.swift
//  Moers
//
//  Created by Lennart Fischer on 07.01.22.
//  Copyright © 2022 Lennart Fischer. All rights reserved.
//

import Foundation

public enum AccessibilityIdentifiers {
    
    public static let tabBar = "AppStrings.tabBar"
    
    public enum Menu {
        public static let dashboard = "AppStrings.Menu.dashboard"
        public static let news = "AppStrings.Menu.news"
        public static let map = "AppStrings.Menu.map"
        public static let events = "AppStrings.Menu.events"
        public static let other = "AppStrings.Menu.other"
    }
    
}
