...
"CompletionPageActionButtonTitle" = "Get started";

/* Dashboard: Petrol */
"PetrolStationsTitle" = "Petrol Stations";

/* Tab: Other */
"AboutTitle" = "About";
"SettingsTitle" = "Settings";
"PrivacyPolicy" = "Privacy Policy";
"Legal" = "Legal";
"Licences" = "Licences";
"UIAdjustments" = "User Interface";
"ThemeTitle" = "Theme";
"RubbishCollectionTitle" = "Pick-up Schedule";
...
